--- a/jdbc-demo/src/main/resources/resource.properties
+++ b/jdbc-demo/src/main/resources/resource.properties
@@ -17,6 +17,6 @@ KUDU_MASTER=xxxxxxx:7051
 
 mysql_drivername=com.mysql.jdbc.Driver
 mysql_url=jdbc:mysql://xxxxx:xxxx/dmtest?characterEncoding=utf8&useSSL=false
-mysql_user=biadmin
-mysql_password=Admin@74123
+mysql_user=xxx
+mysql_password=xxx
 
